--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.thymeleaf.mode = LEGACYHTML5
 
 #MySQL
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ylt?characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/ylt?characterEncoding=utf8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 
